# fanuc_m16ib_binpicking

./: Dockerfile  README.md  run.sh
src/api_moveit_clients/: package.xml  setup.cfg  setup.py
src/api_moveit_clients/api_moveit_clients/: api_moveit.py  util.py
src/fanuc_m16ib_bringup/: CMakeLists.txt  package.xml
src/fanuc_m16ib_bringup/launch/: real.launch.py  simulation.launch.py
src/fanuc_m16ib_bringup/rviz/: moveit.rviz  moveit_and_zivid.rviz
src/fanuc_m16ib_bringup/zivid/: settings_309024.yml  settings_new_11122023.yml
src/fanuc_m16ib_control/: CMakeLists.txt  package.xml
src/fanuc_m16ib_description/: CMakeLists.txt  package.xml
src/fanuc_m16ib_description/config/: hand_eye_calibration.yaml  initial_positions.yaml
src/fanuc_m16ib_description/launch/: vizualize_fanuc.launch.py
src/fanuc_m16ib_description/meshes/collision/: base.stl  link2.stl  link4.stl  link6.stl
src/fanuc_m16ib_description/meshes/visual/: link1.stl  link3.stl  link5.stl
src/fanuc_m16ib_description/rviz/: rviz_config.rviz
src/fanuc_m16ib_description/urdf/: fanuc_m16ib_macro.urdf.xacro  fanuc_m16ib_model.urdf.xacro  fanuc_m16ib_ros2_control.urdf.xacro  fanuc_m16ib_ros2_control.urdf.xacro.xml  materials.urdf.xacro  zivid.urdf.xacro
src/fanuc_m16ib_moveit_config/: CMakeLists.txt  package.xml
src/moveit_wrapper/: CMakeLists.txt  package.xml
src/visionai_ros/: package.xml  setup.cfg  setup.py
src/visionai_ros_interfaces/: CMakeLists.txt  package.xml
src/zivid-simulation/: package.xml  setup.cfg  setup.py
src/zivid_simulation/: package.xml  setup.cfg  setup.py
(+29 files in other folders)
